<?xml version="1.0"?>
<package format="2">
  <name>robocup_nocom_pila</name>
  <version>0.0.0</version>
  <description>Robocup projects</description>

  <maintainer email="nocompila.urjc@gmail.com"></maintainer>

  <license>Apache 2</license>
  <url type="website">https://www.aulavirtual.urjc.es/moodle/course/view.php?id=144699</url>

  <author email="nocompila.urjc@gmail.com"></author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>libzmq3-dev</build_depend>

 
  <build_export_depend>kobuki_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
	<build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>libzmq3-dev</build_export_depend>


  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
	<exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>libzmq3-dev</exec_depend>

  <export>
  </export>
</package>